@@ -11,6 +11,8 @@
 #forbid_utf
 #newline_default lf any anycrlf
 
+/abc\Cdef/info
+
 # Test binary zeroes in the pattern
 
 # /a\0B/ where 0 is a binary zero
